--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Barber Shop</title>
+		<title>Leprosorium</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -11,7 +11,6 @@
 	    <!-- Include all compiled plugins (below), or include individual files as needed -->
 	    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 		
-		<script type="text/javascript" src="/scripts.js"></script>
 			
 			<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,13 +31,12 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    <a class="navbar-brand" href="/">Barber Shop</a>
+			    <a class="navbar-brand" href="/">Leprosotium</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/about">О нас</a></li>
-			      <li><a href="/visit">Записаться</a></li>
-			      <li><a href="/contacts">Контакты</a></li>
+			      <li><a href="/">Posts</a></li>
+			      <li><a href="/new">New post</a></li>			     
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
