--- a/views/new.erb
+++ b/views/new.erb
@@ -1,1 +1,7 @@
 <h1>Add new post</h1>
+
+<form>
+	<textarea class="form-control" rows="6"></textarea>
+	<br>
+	<button type="submit" class="btn btn-primary">Submit</button>
+</form>
