--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,6 @@
 <h1>Add new post</h1>
 
-<form>
+<form action="/new" method="POST">
 	<textarea class="form-control" rows="6"></textarea>
 	<br>
 	<button type="submit" class="btn btn-primary">Submit</button>
