--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,7 @@
 <h1>Add new post</h1>
 
 <form action="/new" method="POST">
-	<textarea class="form-control" rows="6"></textarea>
+	<textarea class="form-control" placeholder="Type post text here" rows="6"></textarea>
 	<br>
 	<button type="submit" class="btn btn-primary">Submit</button>
 </form>
