--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,11 @@
 	<p>
 	 	<%= post['content'] %>
 		<br>
+		<br>
 	 	Added at <%= post['created_date'] %>
+		<br>
+		<br>
+		<a href="/post/<%= post['ID'] %>">Comments</a>
 	</p>			
 	<hr>
 <% end %>
