--- a/views/post.erb
+++ b/views/post.erb
@@ -1,7 +1,16 @@
-<h4>Post details</h4>
+<h4>Post details:</h4>
+<br>
 <p>
  	<%= @row['content'] %>
 	<br>
 	<br>
  	Added at <%= @row['created_date'] %>
 </p>			
+<br>
+<h4>Comments:</h4>
+<br>
+<form action="/post/<%= @row['ID'] %>" method="POST">
+	<textarea name="comment" class="form-control" placeholder="Type comment text here" rows="6"></textarea>
+	<br>
+	<button type="submit" class="btn btn-primary">Add comment</button>
+</form>
