--- a/views/post.erb
+++ b/views/post.erb
@@ -10,7 +10,7 @@
 <h4>Comments:</h4>
 <br>
 <form action="/post/<%= @row['ID'] %>" method="POST">
-	<textarea name="comment" class="form-control" placeholder="Type comment text here" rows="6"></textarea>
+	<textarea name="content" class="form-control" placeholder="Type comment text here" rows="6"></textarea>
 	<br>
 	<button type="submit" class="btn btn-primary">Add comment</button>
 </form>
